feat: updated the service-section

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -10,5 +10,7 @@ $color-white: #fff;
 $color-black: #000;
 $color-green: green;
 
+$color-white-neutral: #F5FFFF;
+
 // FONT
 $default-font-size: 1.6rem;
