--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -37,6 +37,7 @@
         align-self: center;
         height: auto;
         max-width: 50%;
+        color: $color-white;
     }
     
     &__calendar-section {
