--- a/css/style.css
+++ b/css/style.css
@@ -92,21 +92,31 @@ body {
   src: url("../../css/fonts/RedHatText-Bold.ttf");
   /*URL to font*/ }
 
+@font-face {
+  font-family: 'RedHatDisplay';
+  /*a name to be used later*/
+  src: url("../../css/fonts/RedHatDisplay-VariableFont_wght.ttf");
+  /*URL to font*/ }
+
+@font-face {
+  font-family: 'RedHatTextVariable';
+  /*a name to be used later*/
+  src: url("../../css/fonts/RedHatText-VariableFont_wght.ttf");
+  /*URL to font*/ }
+
 body {
   font-family: "RedHatText", sans-serif;
   font-weight: 400; }
 
 .heading-primary {
-  color: #fff;
   text-transform: capitalize;
   font-family: "RedHatTextBold";
-  font-size: 5.6rem;
+  font-size: 5.2rem;
   line-height: 6rem;
   margin-bottom: 4rem;
   animation: moveInLeft 1s ease-out; }
 
 .heading-secondary {
-  color: #fff;
   font-size: 2.2rem;
   margin-bottom: 4rem;
   animation: moveInRight 1s ease-out; }
@@ -151,13 +161,14 @@ body {
   position: relative;
   font-size: 1.6rem;
   border: none;
-  cursor: pointer; }
+  cursor: pointer;
+  text-align: center; }
 
 .btn:hover {
   transform: translateY(-0.3rem);
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
   .btn:hover::after {
-    transform: scaleX(1.4) scaleY(1.6);
+    transform: scaleX(1.2) scaleY(1.4);
     opacity: 0; }
 
 .btn:active, .btn:focus {
@@ -212,6 +223,19 @@ body {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   transform: translateY(0); }
 
+.services__info {
+  display: flex;
+  width: 60%; }
+  .services__info-icon {
+    align-self: flex-start; }
+  .services__info-text {
+    margin-left: .8rem; }
+    .services__info-text-primary {
+      font-family: 'RedHatDisplay', sans-serif;
+      font-weight: 500 !important;
+      font-size: 1.6rem;
+      line-height: 2.4rem; }
+
 .container {
   padding: 0;
   margin: 0; }
@@ -247,7 +271,8 @@ body {
   .header__text-section {
     align-self: center;
     height: auto;
-    max-width: 50%; }
+    max-width: 50%;
+    color: #fff; }
   .header__calendar-section {
     align-self: center;
     flex-basis: 40%;
@@ -455,3 +480,129 @@ body {
       transform: rotate(45deg); }
     #nav-toggle.active span:after {
       transform: rotate(-45deg); }
+
+.section-services {
+  display: flex;
+  padding: 4rem 18rem; }
+
+.services__text-primary {
+  font-family: 'RedHatDisplay', sans-serif;
+  font-weight: 500 !important;
+  font-size: 2.4rem;
+  line-height: 2.88rem; }
+
+.services__text-secondary {
+  font-family: 'RedHatTextVariable', sans-serif;
+  font-weight: 400 !important;
+  font-size: 1.8rem;
+  line-height: 3rem; }
+
+.services__text-info {
+  display: flex;
+  flex-direction: column;
+  align-items: space-between;
+  margin-top: 3rem; }
+
+.services__info:not(:last-child) {
+  margin-bottom: 3rem; }
+
+.services__search-btn {
+  width: 100%; }
+  .services__search-btn-icon {
+    margin-right: .5rem; }
+
+.services__form {
+  flex-basis: 30%;
+  align-self: center;
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+  .services__form-input {
+    margin-bottom: 1.5rem;
+    width: 50%; }
+  .services__form-btn {
+    width: 50%; }
+  .services__form-input-group {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-align: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+    width: 100%; }
+    .services__form-input-group-prepend {
+      margin-right: -1px;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; }
+    .services__form-input-group-text {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      padding: 0.375rem 0.95rem;
+      margin-bottom: 0;
+      font-size: 1rem;
+      font-weight: 400;
+      line-height: 1.5;
+      color: #495057;
+      text-align: center;
+      white-space: nowrap;
+      background-color: #F5FFFF;
+      border: 1px solid #ced4da;
+      border-radius: 0.45rem; }
+  .services__form-control {
+    display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 2.2;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.45rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out; }
+
+.services__image {
+  flex-basis: 33%;
+  animation: moveInBottom 2s ease-out; }
+
+.services__form-input-group > .services__form-input-group-prepend > .services__form-input-group-text {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0; }
+
+.services__form-input-group > .services__form-control:not(:first-child) {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0; }
+
+.services__form-input-group > .services__form-control {
+  position: relative;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  width: 1%;
+  margin-bottom: 0; }
+
+.section-service {
+  padding: 0 18rem 4rem 18rem; }
+
+.service__text {
+  width: 40%; }
+  .service__text-primary {
+    font-family: 'RedHatDisplay', sans-serif;
+    font-weight: 500 !important;
+    font-size: 2.4rem;
+    line-height: 2.88rem; }
+  .service__text-secondary {
+    font-family: 'RedHatTextVariable', sans-serif;
+    font-weight: 400 !important;
+    font-size: 1.6rem;
+    line-height: 3rem; }
