--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -13,23 +13,33 @@
     src: url('../../css/fonts/RedHatText-Bold.ttf'); /*URL to font*/
 }
 
+@font-face {
+    font-family: 'RedHatDisplay'; /*a name to be used later*/
+    src: url('../../css/fonts/RedHatDisplay-VariableFont_wght.ttf'); /*URL to font*/
+}
+
+@font-face {
+    font-family: 'RedHatTextVariable'; /*a name to be used later*/
+    src: url('../../css/fonts/RedHatText-VariableFont_wght.ttf'); /*URL to font*/
+}
+
 body {
     font-family: "RedHatText", sans-serif;
     font-weight: 400;
 }
 
 .heading-primary {
-    color: $color-white;
+    // color: $color-white;
     text-transform: capitalize;
     font-family: "RedHatTextBold";
-    font-size: 5.6rem;
+    font-size: 5.2rem;
     line-height: 6rem;
     margin-bottom: 4rem;
     animation: moveInLeft 1s ease-out;
 }
 
 .heading-secondary {
-    color: $color-white;
+    // color: $color-white;
     font-size: 2.2rem;
     margin-bottom: 4rem;
     
