--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -14,6 +14,7 @@
         // Change for the <button> element
         border: none;
         cursor: pointer;
+        text-align: center;
     }
 
     &:hover {
@@ -21,7 +22,7 @@
         box-shadow: 0 1rem 2rem rgba($color-black, .2);
 
         &::after {
-            transform: scaleX(1.4) scaleY(1.6);
+            transform: scaleX(1.2) scaleY(1.4);
             opacity: 0;
         }
     }
