--- a/css/style.css
+++ b/css/style.css
@@ -236,6 +236,26 @@ body {
       font-size: 1.6rem;
       line-height: 2.4rem; }
 
+.service__box {
+  background-color: #F5FFFF;
+  width: 24rem;
+  height: 24rem;
+  padding: 7.7rem 2.4rem;
+  border-radius: .4rem;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+  border: 1px solid #F5FFFF;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+  .service__box-title {
+    font-family: 'RedHatDisplay', sans-serif;
+    font-weight: 500;
+    font-size: 1.6rem;
+    line-height: 2.4rem;
+    color: #000;
+    margin-top: 1.2rem; }
+
 .container {
   padding: 0;
   margin: 0; }
@@ -606,3 +626,35 @@ body {
     font-weight: 400 !important;
     font-size: 1.6rem;
     line-height: 3rem; }
+
+.service__items {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 4rem; }
+
+.section-subscribe {
+  padding: 4rem 18rem 4rem 18rem;
+  display: flex;
+  justify-content: center; }
+
+.subscribe {
+  width: 82.7rem;
+  padding: 4rem auto;
+  background-color: #C4C4C4;
+  padding-bottom: 4rem;
+  border-radius: 1.6rem; }
+  .subscribe__text {
+    text-align: center;
+    margin: 4rem 0; }
+  .subscribe__form {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto; }
+    .subscribe__form-input {
+      width: 30% !important; }
+    .subscribe__form-btn {
+      width: 20%;
+      margin-left: 1.5rem; }
+  .subscribe-btn {
+    padding: .8rem 1.5rem !important;
+    font-size: 1.2rem !important; }
