--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,6 +4,7 @@ $color-primary-light:  #06AED5;
 $color-grey: #7d7d7d;
 $color-grey-dark: #2f2f2f;
 $color-greyish-white: #fafafa;
+$color-default-grey: #C4C4C4;
 
 
 $color-white: #fff;
