--- a/css/style.css
+++ b/css/style.css
@@ -503,7 +503,7 @@ body {
 
 .section-services {
   display: flex;
-  padding: 4rem 18rem; }
+  padding: 4rem 18rem 0 18rem; }
 
 .services__text-primary {
   font-family: 'RedHatDisplay', sans-serif;
