--- a/css/style.css
+++ b/css/style.css
@@ -727,3 +727,38 @@ body {
   .subscribe-btn {
     padding: .8rem 1.5rem !important;
     font-size: 1.2rem !important; }
+
+.section-app {
+  margin: 4rem 32rem 4rem 32rem;
+  display: flex;
+  justify-content: space-between;
+  border-radius: 2rem;
+  background-color: #0090B7; }
+  .section-app__text {
+    flex-basis: 60%;
+    margin-left: 10rem;
+    align-self: center;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; }
+    .section-app__text--title {
+      font-family: 'RedHatDisplay', sans-serif;
+      font-weight: 500;
+      font-size: 2.6rem;
+      line-height: 3.36rem;
+      padding-bottom: 1.4rem; }
+    .section-app__text--description {
+      font-family: 'RedHatTextVariable', sans-serif;
+      font-weight: 400;
+      font-size: 1.8rem;
+      line-height: 2.5rem;
+      padding-bottom: 1.4rem; }
+    .section-app__text--icon {
+      display: inline-block; }
+      .section-app__text--icon :not(:last-child) {
+        margin-right: 1rem; }
+  .section-app__img {
+    margin: 4rem 6rem 0 2rem; }
+    .section-app__img-1 {
+      margin-bottom: -0.4rem; }
