--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -212,3 +212,55 @@
         font-size: 1.2rem !important;
     }
 }
+
+.section-app {
+    margin: 4rem 32rem 4rem 32rem;
+    display: flex;
+    justify-content: space-between;
+
+    border-radius: 2rem;
+    background-color: $color-primary;
+
+    &__text {
+        flex-basis: 60%;
+        margin-left: 10rem;
+        align-self: center;
+        color: $color-white;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        &--title {
+            font-family: 'RedHatDisplay', sans-serif;
+            font-weight: 500;
+            font-size: 2.6rem;
+            line-height: 3.36rem;
+            padding-bottom: 1.4rem;
+        }
+
+        &--description {
+            font-family: 'RedHatTextVariable', sans-serif;
+            font-weight: 400 ;
+            font-size: 1.8rem;
+            line-height: 2.5rem;
+            padding-bottom: 1.4rem;
+        }
+
+        &--icon {
+            display: inline-block;
+
+            :not(:last-child) {
+                margin-right: 1rem;
+            }
+        }
+    }
+
+    &__img {
+        margin: 4rem 6rem 0 2rem;
+
+        &-1 {
+            margin-bottom: -0.4rem;
+        }
+    }
+}
