feat: adds plan section to home

--- a/css/style.css
+++ b/css/style.css
@@ -256,6 +256,117 @@ body {
     color: #000;
     margin-top: 1.2rem; }
 
+.toggle {
+  align-items: center;
+  border-radius: 10rem;
+  display: flex;
+  font-weight: 700;
+  margin-bottom: 1.6rem; }
+  .toggle:last-of-type {
+    margin: 0; }
+  .toggle__input {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px; }
+    .toggle__input:not([disabled]):active + .toggle-track,
+    .toggle__input:not([disabled]):focus + .toggle-track {
+      border: 1px solid transparent;
+      box-shadow: 0px 0px 0px 2px #fff; }
+  .toggle-track {
+    background: #0090B7;
+    border: 1px solid #0090B7;
+    border-radius: 10rem;
+    cursor: pointer;
+    display: flex;
+    height: 3.0rem;
+    position: relative;
+    width: 6.0rem; }
+    @media screen and (-ms-high-contrast: active) {
+      .toggle-track {
+        border-radius: 0; } }
+  .toggle-indicator {
+    align-items: center;
+    background: #fff;
+    border-radius: 2.4rem;
+    bottom: 3px;
+    display: flex;
+    height: 2.4rem;
+    justify-content: center;
+    left: 2px;
+    outline: solid 2px transparent;
+    position: absolute;
+    transition: 0.25s;
+    width: 2.4rem; }
+
+.toggle__input:checked + .toggle-track .toggle-indicator {
+  background: #fff;
+  transform: translateX(3rem); }
+
+.plan-card {
+  background-color: #F5FFFF;
+  width: 23.2rem;
+  height: 32.8rem;
+  padding: 2rem;
+  border-radius: .4rem;
+  border: 1px solid #DEE2E6;
+  position: relative; }
+  .plan-card__heading {
+    margin-bottom: 1.4rem; }
+    .plan-card__heading--title {
+      font-family: 'RedHatDisplay', sans-serif;
+      font-weight: 400;
+      font-size: 1.4rem;
+      line-height: 2.2rem;
+      margin-bottom: .4rem; }
+    .plan-card__heading--description {
+      font-family: 'RedHatText', sans-serif;
+      font-weight: 400;
+      font-size: 1rem;
+      line-height: 1.72rem; }
+      .plan-card__heading--description span {
+        font-family: 'RedHatDisplay', sans-serif;
+        font-weight: 500;
+        font-size: 1.8rem;
+        line-height: 2.2rem; }
+  .plan-card ul {
+    list-style: none;
+    margin-bottom: 1rem;
+    text-align: left; }
+    .plan-card ul li {
+      font-family: 'RedHatText', sans-serif;
+      font-weight: 400;
+      font-size: 1.2rem;
+      line-height: 2.2rem;
+      color: #0D2344; }
+      .plan-card ul li:not(:last-child) {
+        margin-bottom: .6rem; }
+  .plan-card__link-item {
+    color: #0090B7;
+    text-align: left; }
+  .plan-card__link {
+    text-decoration: none;
+    font-family: 'RedHatText', sans-serif;
+    font-weight: 400;
+    font-size: 1.2rem;
+    line-height: 2.2rem; }
+    .plan-card__link:link, .plan-card__link:visited {
+      display: inline-block;
+      text-decoration: none;
+      transition: all 0.3s ease; }
+    .plan-card__link:hover, .plan-card__link:active {
+      transform: translateY(-0.5rem); }
+  .plan-card__btn {
+    position: absolute;
+    bottom: 12px;
+    left: 32%;
+    color: #fff !important; }
+  .plan-card:not(:last-child) {
+    margin-right: 1rem; }
+
 .container {
   padding: 0;
   margin: 0; }
@@ -762,3 +873,86 @@ body {
     margin: 4rem 6rem 0 2rem; }
     .section-app__img-1 {
       margin-bottom: -0.4rem; }
+
+.section-healthplan {
+  margin: 4rem 0 4rem 0;
+  display: flex;
+  justify-content: center;
+  background-color: #F5FFFF; }
+
+.healthplan {
+  margin: 4rem 0; }
+  .healthplan__text {
+    text-align: center;
+    margin-bottom: 2rem; }
+    .healthplan__text--primary {
+      font-family: 'RedHatDisplay', sans-serif;
+      font-weight: 500;
+      font-size: 2.4rem;
+      line-height: 2.88rem;
+      padding-bottom: 1.4rem; }
+    .healthplan__text-toggle {
+      display: flex;
+      justify-content: center; }
+
+.toggle__left {
+  margin-right: 2rem;
+  font-family: 'RedHatDisplay', sans-serif;
+  font-weight: 500;
+  font-size: 1.4rem;
+  line-height: 1.92rem;
+  text-transform: uppercase;
+  color: #000; }
+
+.toggle__right {
+  margin-left: 2rem;
+  font-family: 'RedHatDisplay', sans-serif;
+  font-weight: 500;
+  font-size: 1.4rem;
+  line-height: 1.92rem;
+  text-transform: uppercase;
+  color: #0090B7; }
+
+.healthplan__tabset {
+  text-align: center; }
+  .healthplan__tabset input[type="radio"] {
+    position: absolute;
+    left: -200vw; }
+  .healthplan__tabset-panel {
+    display: none; }
+  .healthplan__tabset label {
+    position: relative;
+    display: inline-block;
+    padding: 1rem;
+    border: 1px solid transparent;
+    border-bottom: 0;
+    cursor: pointer;
+    font-weight: 600;
+    margin-right: -2px;
+    border-radius: .2rem; }
+    .healthplan__tabset label:hover,
+    .healthplan__tabset label:focus + input:focus + label {
+      color: #0090B7; }
+  .healthplan__tabset input:checked + label {
+    color: #0090B7; }
+  .healthplan__tabset input:checked + label {
+    border-color: #DEE2E6;
+    border-bottom: 1px solid #F5FFFF !important; }
+  .healthplan__tabset :not(input:checked) + label {
+    border-color: #F5FFFF;
+    border-bottom: 1px solid #DEE2E6;
+    margin-left: 0px; }
+  .healthplan__tabset-panel {
+    margin-top: 1rem; }
+
+.plan-container {
+  display: flex !important;
+  justify-content: space-between; }
+
+.healthplan__tabset > input:first-child:checked ~ .healthplan__tabset-panels > .healthplan__tabset-panel:first-child,
+.healthplan__tabset > input:nth-child(3):checked ~ .healthplan__tabset-panels > .healthplan__tabset-panel:nth-child(2),
+.healthplan__tabset > input:nth-child(5):checked ~ .healthplan__tabset-panels > .healthplan__tabset-panel:nth-child(3),
+.healthplan__tabset > input:nth-child(7):checked ~ .healthplan__tabset-panels > .healthplan__tabset-panel:nth-child(4),
+.healthplan__tabset > input:nth-child(9):checked ~ .healthplan__tabset-panels > .healthplan__tabset-panel:nth-child(5),
+.healthplan__tabset > input:nth-child(11):checked ~ .healthplan__tabset-panels > .healthplan__tabset-panel:nth-child(6) {
+  display: block; }
