--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -5,6 +5,7 @@ $color-grey: #7d7d7d;
 $color-grey-dark: #2f2f2f;
 $color-greyish-white: #fafafa;
 $color-default-grey: #C4C4C4;
+$color-grey-border: #DEE2E6;
 
 
 $color-white: #fff;
