--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -16,6 +16,10 @@
   @mixin textCenter {
     text-align: center;
   }
+
+  @mixin white-gradient {
+    background: linear-gradient(to right,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
+  }
   
   
   // MEDIA QUERY MANAGER
