--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -41,3 +41,8 @@
         transform: translate(0);
     }
 }
+
+@keyframes scroll {
+	0% { transform: translateX(0); }
+	100% { transform: translateX(calc(-25rem * 7))}
+}
