--- a/sass/components/_plan-card.scss
+++ b/sass/components/_plan-card.scss
@@ -7,6 +7,8 @@
     border: 1px solid $color-grey-border;
     position: relative;
 
+    animation: moveInBottom 1s ease-out;
+
     &__heading {
         margin-bottom: 1.4rem;
 
