--- a/sass/components/_plan-card.scss
+++ b/sass/components/_plan-card.scss
@@ -88,5 +88,9 @@
 
     &:not(:last-child) {
         margin-right: 1rem;
+
+        @include respond(small-phone) {
+            margin-bottom: 1rem;
+        }
     }
 }
