--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -23,6 +23,7 @@
     @include respond(small-phone) {
         height: 80vh;
         padding: 1rem 1rem 0 1rem;
+        //background-image: none;
     }
 
     &__body {
@@ -38,6 +39,10 @@
         height: auto;
         max-width: 50%;
         color: $color-white;
+
+        @include respond(small-phone) {
+            max-width: 100%;
+        }
     }
     
     &__calendar-section {
