--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -31,7 +31,7 @@ body {
 .heading-primary {
     // color: $color-white;
     text-transform: capitalize;
-    font-family: "RedHatTextBold";
+    font-family: "RedHatDisplay";
     font-size: 5.2rem;
     line-height: 6rem;
     margin-bottom: 4rem;
