--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -11,6 +11,7 @@ $color-grey-border: #DEE2E6;
 $color-white: #fff;
 $color-black: #000;
 $color-green: green;
+$color-tertiary: #B7D5C2;
 
 $color-white-neutral: #F5FFFF;
 
