--- a/css/style.css
+++ b/css/style.css
@@ -1244,3 +1244,370 @@ body {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap; }
+
+.individualplan-section {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
+  background: #fff; }
+
+.individual-plan__heading--primary {
+  margin-top: 100px;
+  letter-spacing: 0.8px;
+  font-size: 28px;
+  font-weight: 500px;
+  text-align: center; }
+
+.individual-plan__heading--secondary {
+  padding: 5px 0 20px;
+  font-family: "RedHatText", sans-serif;
+  font-size: 2.7rem; }
+
+.individual-plan__heading--tertiary {
+  padding-bottom: 13px;
+  letter-spacing: 0.8px;
+  font-weight: 500;
+  font-size: 20px;
+  font-family: "RedHatText", sans-serif; }
+
+.individual-plan__heading--PeterNdukwe {
+  font-size: 16px;
+  color: #094063; }
+
+.link_text {
+  text-decoration: none;
+  color: #2091ee;
+  font-family: "RedHatText", sans-serif; }
+
+.individual__button-primary-text {
+  font-family: "RedHatText", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0px;
+  text-align: center; }
+
+.individual__button-primary {
+  height: 46px;
+  width: 121px;
+  left: 0px;
+  top: 0px;
+  border-radius: 8px;
+  padding-top: 8px;
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: 0px; }
+
+.individual-btn, .individual-btn:link, .individual-btn:visited {
+  text-transform: capitalize;
+  display: inline-block;
+  text-decoration: none;
+  padding-top: 7px;
+  border-radius: 0.8rem;
+  transition: all 0.2s;
+  position: relative;
+  font-size: 1.6rem;
+  border: none;
+  cursor: pointer;
+  text-align: center; }
+
+.individual-btn:hover {
+  transform: translateY(-0.3rem);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
+  .individual-btn:hover::after {
+    transform: scaleX(1.2) scaleY(1.4);
+    opacity: 0; }
+
+.individual-btn:active, .individual-btn:focus {
+  outline: none;
+  transform: translateY(-1px);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+
+.individual-btn--outline {
+  background-color: #fff;
+  color: #2f2f2f; }
+  .individual-btn--outline::after {
+    background-color: #fff; }
+
+.individual-btn--primary {
+  background-color: #0090B7;
+  color: #fff; }
+  .individual-btn--primary::after {
+    background-color: #0090B7; }
+
+.individual-btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 0.8rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.6s; }
+
+.individual-btn--animated {
+  animation: moveInBottom 0.5s ease-out 0.75s;
+  animation-fill-mode: backwards; }
+
+.individual_btn-text:link, .individual_btn-text:visited {
+  font-family: "RedHatText", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0px;
+  transition: all 0.2s; }
+
+.individual_btn-text:hover {
+  background-color: #0090B7;
+  color: #fff;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+  transform: translateY(-2px); }
+
+.individual_btn-text:active {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  transform: translateY(0); }
+
+.corporate-plan__heading--primary {
+  margin-top: 100px;
+  letter-spacing: 0.8px;
+  top: 600px;
+  font-size: 28px;
+  font-weight: 500px;
+  font-family: "RedHatText", sans-serif;
+  text-align: center; }
+
+.corporate__button-primary-text {
+  font-family: "RedHatText", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0px;
+  text-align: center; }
+
+.corporate__button-primary {
+  height: 46px;
+  width: 139px;
+  left: 0px;
+  top: 0px;
+  border-radius: 8px;
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: 0px; }
+
+.corporate-btn, .corporate-btn:link, .corporate-btn:visited {
+  text-transform: capitalize;
+  display: inline-block;
+  text-decoration: none;
+  padding-top: 8px;
+  border-radius: 0.8rem;
+  transition: all 0.2s;
+  position: relative;
+  font-size: 1.6rem;
+  border: none;
+  cursor: pointer;
+  text-align: center; }
+
+.corporate-btn:hover {
+  transform: translateY(-0.3rem);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
+  .corporate-btn:hover::after {
+    transform: scaleX(1.2) scaleY(1.4);
+    opacity: 0; }
+
+.corporate-btn:active, .corporate-btn:focus {
+  outline: none;
+  transform: translateY(-1px);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+
+.corporate-btn--outline {
+  background-color: #fff;
+  color: #2f2f2f; }
+  .corporate-btn--outline::after {
+    background-color: #fff; }
+
+.corporate-btn--primary {
+  background-color: #0090B7;
+  color: #fff; }
+  .corporate-btn--primary::after {
+    background-color: #0090B7; }
+
+.corporate-btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 0.8rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.6s; }
+
+.corporate-btn--animated {
+  animation: moveInBottom 0.5s ease-out 0.75s;
+  animation-fill-mode: backwards; }
+
+.corporate_btn-text:link, .corporate_btn-text:visited {
+  font-family: "RedHatText", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0px;
+  transition: all 0.2s; }
+
+.corporate_btn-text:hover {
+  background-color: #0090B7;
+  color: #fff;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+  transform: translateY(-2px); }
+
+.corporate_btn-text:active {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  transform: translateY(0); }
+
+.primary-content img,
+.secondary-content img {
+  max-width: 80px;
+  font-family: "RedHatText", sans-serif;
+  margin-bottom: 10px; }
+
+.primary-content {
+  text-align: center;
+  width: 100%;
+  display: grid;
+  gap: 6px;
+  margin: 5% auto;
+  margin-bottom: 30px;
+  grid-template-columns: repeat(3, 1fr); }
+
+.secondary-content {
+  display: grid;
+  position: relative;
+  grid-template-columns: repeat(2, 1fr);
+  margin: 30px auto;
+  width: 60%;
+  right: 3%;
+  gap: 10%;
+  text-align: center; }
+
+.primary-paragraph,
+.secondary-paragraph {
+  width: 450px;
+  letter-spacing: 0.8px;
+  font-size: 18px; }
+
+.last-paragraph {
+  text-align: center;
+  max-width: 55%;
+  position: relative;
+  margin: 6% auto 7%; }
+
+p {
+  margin-bottom: 20px;
+  font-family: "RedHatText", sans-serif;
+  font-weight: 400;
+  font-size: 16px; }
+
+.business__title--primary {
+  font-size: 32px;
+  text-align: center;
+  font-weight: 500;
+  font-family: "RedHatText", sans-serif; }
+
+.corporate-plan__heading--PeterNdukwe {
+  font-size: 20px;
+  font-weight: 400;
+  color: #094063;
+  font-family: "RedHatText", sans-serif; }
+
+.corporate__button-primary-text {
+  font-family: "RedHatText", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0px;
+  text-align: center; }
+
+.corporate__button-primary {
+  height: 46px;
+  width: 139px;
+  left: 0px;
+  top: 0px;
+  border-radius: 8px;
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: 0px; }
+
+.corporate-btn, .corporate-btn:link, .corporate-btn:visited {
+  text-transform: capitalize;
+  display: inline-block;
+  text-decoration: none;
+  padding-top: 7px;
+  border-radius: 0.8rem;
+  transition: all 0.2s;
+  position: relative;
+  font-size: 1.6rem;
+  border: none;
+  cursor: pointer;
+  text-align: center; }
+
+.corporate-btn:hover {
+  transform: translateY(-0.3rem);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
+  .corporate-btn:hover::after {
+    transform: scaleX(1.2) scaleY(1.4);
+    opacity: 0; }
+
+.corporate-btn:active, .corporate-btn:focus {
+  outline: none;
+  transform: translateY(-1px);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+
+.corporate-btn--outline {
+  background-color: #fff;
+  color: #2f2f2f; }
+  .corporate-btn--outline::after {
+    background-color: #fff; }
+
+.corporate-btn--primary {
+  background-color: #0090B7;
+  color: #fff; }
+  .corporate-btn--primary::after {
+    background-color: #0090B7; }
+
+.corporate-btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 0.8rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.6s; }
+
+.corporate-btn--animated {
+  animation: moveInBottom 0.5s ease-out 0.75s;
+  animation-fill-mode: backwards; }
+
+.corporate_btn-text:link, .corporate_btn-text:visited {
+  font-family: "RedHatText", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0px;
+  transition: all 0.2s; }
+
+.corporate_btn-text:hover {
+  background-color: #0090B7;
+  color: #fff;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+  transform: translateY(-2px); }
+
+.corporate_btn-text:active {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  transform: translateY(0); }
