--- a/sass/pages/__index.scss
+++ b/sass/pages/__index.scss
@@ -2,4 +2,9 @@
 @import "about";
 @import "individualplan";
 @import "corporateplan";
+@import "faq";
+@import "getstarted";
+@import "contact-page";
+@import "partners";
+
 
